@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.4
-Date: 2009-06-13
+Date: 2009-06-17
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), methods
